mas-crm/force-app/main/default/objects/Service_Case__c/fields/AMC_Status__c.field-meta.xml
<CustomField>
    <fullName>AMC_Status__c</fullName>
    <formula>IF(TODAY() &lt;= Registered_Product__r.AMC_Expiry__c, &quot;Active&quot;, &quot;Expired&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMC Status</label>
    <type>Text</type>
</CustomField>