mas-crm/force-app/main/default/objects/Service_Case__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned Agent</label>
    <referenceTo>Service_Agent__c</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>