mas-crm/force-app/main/default/objects/Service_Case__c/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <label>Customer Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>