mas-crm/force-app/main/default/objects/Service_Case__c/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <label>Customer Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>