mas-crm/force-app/main/default/objects/Service_Case__c/fields/Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Dispatch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatch</label>
    <referenceTo>Dispatch__c</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>