mas-crm/force-app/main/default/objects/Service_Case__c/fields/Engineer_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer Assigned</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>