mas-crm/force-app/main/default/objects/Service_Case__c/fields/Engineer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Feedback__c</fullName>
    <label>Engineer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>