mas-crm/force-app/main/default/objects/Service_Case__c/fields/Product_Older_Than_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Product_Older_Than_1_Year__c</fullName>
    <formula>(TODAY() -  Registered_Product__r.Purchase_Date__c) &gt;365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Older Than 1 Year</label>
    <type>Checkbox</type>
</CustomField>