mas-crm/force-app/main/default/objects/Service_Case__c/fields/Registered_Product__c.field-meta.xml
<CustomField>
    <fullName>Registered_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Registered Product</label>
    <referenceTo>Registered_Product__c</referenceTo>
    <relationshipLabel>Service Cases</relationshipLabel>
    <relationshipName>Service_Cases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>