mas-crm/force-app/main/default/objects/Service_Case__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <label>SLA Deadline</label>
    <type>DateTime</type>
</CustomField>