mas-crm/force-app/main/default/objects/Service_Case__c/fields/SLA_Elapsed_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Elapsed_Hours__c</fullName>
    <formula>(NOW() - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Elapsed Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>