mas-crm/force-app/main/default/objects/Service_Case__c/fields/SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>SLA_Met__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(SLA_Deadline__c)),
    NOT(ISBLANK( Closed_Date__c )),
     Closed_Date__c  &lt;= SLA_Deadline__c 
  ),
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Met</label>
    <type>Checkbox</type>
</CustomField>