mas-crm/force-app/main/default/objects/Service_Case__c/fields/Warranty_Status__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Status__c</fullName>
    <formula>IF(TODAY() &lt;= Registered_Product__r.Warranty_Expiry__c, &quot;Valid&quot;, &quot;Expired&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warranty Status</label>
    <type>Text</type>
</CustomField>