mas-crm/force-app/main/default/objects/Service_Case__c/validationRules/SLA_Deadline_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SLA_Deadline_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    SLA_Deadline__c &lt; NOW(),
    ISCHANGED(SLA_Deadline__c)
)</errorConditionFormula>
    <errorDisplayField>SLA_Deadline__c</errorDisplayField>
    <errorMessage>SLA deadline cannot be set in the past</errorMessage>
</ValidationRule>