mas-crm/force-app/main/default/objects/Service_Case__c/listViews/SLAEscalationQueue_Service_Case.listView-meta.xml
<ListView>
    <fullName>SLAEscalationQueue_Service_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>SLAEscalationQueue</label>
    <queue>SLAEscalationQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>